2002-04-07  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* mapedit/shapelst.*: don't take address of overloaded function

2002-04-06  Jeff Freedman  <jeff@amy.nerble.net>

	* mapedit/studio.cc (ExultStudio): Copy files from
	'data/estudio/new' to new game's 'static' directory.

	* files/utils.{cc,h}:  U7copy copies a file.

2002-04-05  Jeff Freedman  <jeff@amy.nerble.net>

	* monsters.{cc,h}:  In_world linking rewritten.
	* actorio.cc: Use move() to place actors in world.

2002-04-05  Dominik Reichardt <gigdr@tesionmail.de>
	* tools/shp2pcx.txt, splitshp.txt, textpack.txt added, expack.txt updated.
  	  According to Robert Bihlmeyer's manuals
	* docs/exultstudio.txt added.  First draft based on Robert Bihlmeyer's manual

2002-04-04  Darke <darkepaw@users.sourceforge.net>
	* conf/Configuration.cc conf/xmain.cc: Added some #define-able tracing
	code, fixed a few bugs in confregress.

2002-04-03  Jeff Freedman  <jeff@amy.nerble.net>

	* mapedit/studio.cc: Show Exult logo in 'Prompt' box.

2002-04-02  Jeff Freedman  <jeff@amy.nerble.net>

	* mapedit/studio.cc: "New shape" menu items.
	* files/Flex.cc:  Fixed bug in if_flex().

2002-04-01  Darke <darkepaw@users.sourceforge.net>
	* conf/Configuration.h: Removed memory leak.
	* usecode/ucxt/*: Removed memory leak, cleaned code.

2002-03-31  Darke <darkepaw@users.sourceforge.net>
	* palette.cc, mapedit/objbrowse.cc, mapedit/studio.cc: namespace fixes
	* usecode/ucxt/*: Added ext32 header support.

2002-03-29  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* usecode/useval.*: fixed stupid output bug
	* usecode/useval.*: serialize arrays & pointers
	* server/objserial.*: move Serial_in, Serial_out class to header
	* server/server.*: Server_delay() now accepts a custom
	message handling function. (default is still Handle_client_message)
	* server/servemsg.*: added usecode_debugging message type

2002-03-28  Jeff Freedman  <jeff@amy.nerble.net>
